--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 }
 
 .inputbox{
-    margin: 0 20% 0px 20%;
+    margin: -20px 20% 0px 20%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -53,9 +53,11 @@ body{
     align-items: center;
     gap: 4px;
     color: white;
+    cursor: pointer;
 }
 .btn-add:hover{
     box-shadow: rgba(39, 121, 245, 0.35) 0px 5px 15px;
+    background-color: #4da8de;
 }
 
 .sec{
