--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
     box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
 }
 
-.btn-add{
+#btn-add{
     background: #1E6F9F;
     border-radius: 8px;
     border: none;
@@ -65,8 +65,8 @@ body{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    height: 287px;
-    /*border: solid 1px  red;*/
+    height: 500px;
+    border: solid 1px  red;
 }
 
 .cricon{
@@ -83,13 +83,14 @@ body{
     color: #8284FA;
 }
 
-.tasklist{
+.start-message{
     display: flex;
     flex-direction: column;
     justify-content: center;
     /*border: solid 1px red;*/
     width: 100%;
     height: 85%;
+    display: none;
 }
 
 #clip{
@@ -119,4 +120,25 @@ body{
   font-style: inter;
   font-size: 16px;
   width: 100%;
+}
+
+.start-message.hidden{
+    display: none;
+}
+
+.taskList{
+    display: flex;
+    justify-content: center;
+    border: solid 1px red;
+    height: 90%;
+}
+.item{
+    background-color: #333333;
+    display: flex;
+    border: solid 1px red;
+    justify-content: space-between;
+    width: 100%;
+    height: 65px;
+    border-radius: 8px;
+    align-items: center;
 }
